use bbl built at the begining of the pipeline for docker-image
- dont rebuild in the dockerfile
- this way we can be confident the thing we are releasing works

[#159124000]

--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -2582,6 +2582,8 @@ jobs:
       passed: [bbl-downstream-docker-image-bump-deployments]
     - get: bbl-cli-dev
       passed: [bbl-downstream-docker-image-bump-deployments]
+      params:
+        unpack: true
   - task: bbl-leftovers
     file: ci/scripts/bosh-bootloader/leftovers/task.yml
     image: cf-deployment-concourse-tasks-bbl-dev-docker-image
