--- a/dockerfiles/cf-deployment-concourse-tasks-bbl-dev/Dockerfile
+++ b/dockerfiles/cf-deployment-concourse-tasks-bbl-dev/Dockerfile
@@ -21,13 +21,8 @@ RUN \
 
 RUN go get -u github.com/jteeuwen/go-bindata/...
 
-# go install latest bosh-bootloader develop with packaged terraform
-ADD bosh-bootloader /go/src/github.com/cloudfoundry/bosh-bootloader
-RUN cd /go/src/github.com/cloudfoundry/bosh-bootloader > /dev/null && \
-    git rev-parse HEAD && \
-    scripts/update_terraform_binaries && \
-    rm -f $(which terraform) && \
-    go install -tags includeTerraform github.com/cloudfoundry/bosh-bootloader/bbl
+# add bbl from latest commit
+ADD bbl-cli-dev/bin/bbl-*linux_x86_64 /usr/local/bin/bbl
 
 RUN cp -r /go/src/github.com/cloudfoundry/bosh-bootloader /var/repos
 
